# ScreenPilot

./: .env.example  .gitignore  README.md  agent.py  dashboard.html  main.py  pyproject.toml  requirements.txt  tools.py  ui.html
