[project]
name = "ui-navigator"
version = "2.0.0"
description = "Visual UI control agent powered by Gemini 2.0 Flash + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.134.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
    "langgraph>=0.2.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
cloud = [
    "google-cloud-aiplatform>=1.60.0",
]
